# notes_app

./: .env.example  LICENSE  README.md  package.json  pnpm-lock.yaml
scripts/: release-mac.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  db.rs  error.rs  lib.rs  parser.rs  state.rs
src/chrono/: ChronoView.tsx  ViewModeToggle.tsx
src/editor/: BlockMenu.tsx  BlockView.tsx  BubbleMenu.tsx  CanvasEditor.tsx  CanvasFeed.tsx  ChatBox.tsx  HashtagList.tsx  SlashMenuList.tsx  VersionHistoryModal.tsx  blockTypes.tsx  editorRef.ts
src/editor/extensions/: Block.ts  BlockDragHandle.ts  CanvasLasso.ts  ClipboardSerialize.ts  Document.ts  FastPlaceholder.ts  Hashtag.ts  HashtagHighlight.ts  KeyboardActions.ts  PerfProfile.ts  SearchHighlight.ts  SlashMenu.ts  splitBlock.ts
src/hooks/: useDragRegion.ts
src/lib/: debounce.ts  ipc.ts  markdown.ts
src/settings/: AppearanceTab.tsx  BackupsTab.tsx  SettingsModal.tsx  WorkspaceTab.tsx
src/sidebar/: SearchPane.tsx  SearchResultsPane.tsx  SectionsPane.tsx  Sidebar.tsx  TagContextMenu.tsx  TagDeleteModal.tsx  TagDescriptionModal.tsx  TagsPane.tsx
src/stores/: chatSettings.ts  uiSettings.ts  workspace.ts
src/tag-view/: TagPage.tsx
src/tags-view/: TagsView.tsx
src/topbar/: TopBarSearch.tsx
