[package]
name = "mochi"
version = "0.2.1"
description = "Mochi — local-first markdown notes"
authors = ["Mochi"]
edition = "2021"

[lib]
name = "mochi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12"
ulid = { version = "1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
parking_lot = "0.12"
once_cell = "1"
regex = "1"
